--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -3609,6 +3609,7 @@ item.rbmk_fuel_ueu.name=NU RBMK Fuel Rod
 item.rbmk_fuel_zfb_am_mix.name=Fuel Grade Americium RBMK ZFB Rod
 item.rbmk_fuel_zfb_bismuth.name=Bismuth RBMK ZFB Rod
 item.rbmk_fuel_zfb_pu241.name=Pu-241 RBMK ZFB Rod
+item.rbmk_fuel_gravity.name=§7Graviton RBMK Fuel Rod§r
 item.rbmk_lid.name=RBMK Cover Panel
 item.rbmk_lid_glass.name=RBMK Glass Cover Panel
 item.rbmk_pellet_balefire.name=Balefire Fuel Pellet
@@ -3642,6 +3643,7 @@ item.rbmk_pellet_ueu.name=NU Fuel Pellet
 item.rbmk_pellet_zfb_am_mix.name=Fuel Grade Americium ZFB Pellet
 item.rbmk_pellet_zfb_bismuth.name=Bismuth ZFB Pellet
 item.rbmk_pellet_zfb_pu241.name=Pu-241 ZFB Pellet
+item.rbmk_pellet_gravity.name=§7Graviton Fuel Pellet§r
 item.rbmk_tool.name=RBMK Console Linking Device
 item.rbmk_tool.desc=Sneak and right-click RBMK to save the position,$sneak and right-click console to link!
 item.rbmk_tool.linked=Position set!
