--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -3916,6 +3916,7 @@ item.shimmer_handle.name=Reinforced Polymer Handle
 item.shimmer_head.name=Heavy Hammer Head
 item.shimmer_sledge.name=Shimmer Sledge
 item.singularity.name=Singularity
+item.singularity_naked.name=Naked Singularity
 item.singularity_counter_resonant.name=Contained Counter-Resonant Singularity
 item.singularity_micro.name=Micro Singularity
 item.singularity_spark.name=Spark Singularity
@@ -4369,6 +4370,7 @@ tile.block_corium_cobble.name=Corebblestone
 tile.block_daffergon.name=Block of Daffergon
 tile.block_desh.name=Reinforced Block of Desh
 tile.block_dineutronium.name=Block of Dineutronium
+tile.block_electronium.name=Block of Electronium
 tile.block_dura_steel.name=Reinforced Block of High-Speed Steel
 tile.block_electrical_scrap.name=Block of Electrical Scrap
 tile.block_euphemium.name=Block of Euphemium
@@ -4870,6 +4872,7 @@ tile.machine_difurnace_on.name=Blast Furnace
 tile.machine_difurnace_rtg_off.name=Nuclear Blast Furnace
 tile.machine_difurnace_rtg_on.name=Nuclear Blast Furnace
 tile.machine_dineutronium_battery.name=Spark Energy Storage Block
+tile.machine_electronium_block.name=Electronium Energy Storage Block
 tile.machine_drill.name=Automatic Mining Drill
 tile.machine_electric_furnace_off.name=Electric Furnace
 tile.machine_electric_furnace_on.name=Electric Furnace
