--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -2290,6 +2290,7 @@ item.crystal_trixite.name=Trixite Crystals
 item.crystal_tungsten.name=Tungsten Crystals
 item.crystal_uranium.name=Uranium Crystals
 item.crystal_xen.name=Artificial Xen Crystal
+item.crystal_xen_lattice.name=Entangled Xen Crystal Lattice
 item.crt_display.name= Cathode Ray Tube
 item.cube_power.name=Electronium Cube
 item.custom_amat.name=Custom Nuke Antimatter Rod
@@ -3319,6 +3320,7 @@ item.particle_sparkticle.name=Sparkticle Capsule
 item.particle_strange.name=Strange Quark Capsule
 item.particle_tachyon.name=Tachyon Capsule
 item.particle_graviton.name=§7Graviton Capsule§r
+item.oscillating_energy.name=Harmonically Oscillating Quantum Energy
 item.parts_legendary.name=Legendary Parts
 item.peas.name=Peas
 item.pedestal_steel.name=Steel Pedestal
@@ -3610,6 +3612,7 @@ item.rbmk_fuel_zfb_am_mix.name=Fuel Grade Americium RBMK ZFB Rod
 item.rbmk_fuel_zfb_bismuth.name=Bismuth RBMK ZFB Rod
 item.rbmk_fuel_zfb_pu241.name=Pu-241 RBMK ZFB Rod
 item.rbmk_fuel_gravity.name=§7Graviton RBMK Fuel Rod§r
+item.rbmk_fuel_lutece.name=§3Lutece Quasi-RBMK Fuel Rod§r
 item.rbmk_lid.name=RBMK Cover Panel
 item.rbmk_lid_glass.name=RBMK Glass Cover Panel
 item.rbmk_pellet_balefire.name=Balefire Fuel Pellet
@@ -3644,6 +3647,7 @@ item.rbmk_pellet_zfb_am_mix.name=Fuel Grade Americium ZFB Pellet
 item.rbmk_pellet_zfb_bismuth.name=Bismuth ZFB Pellet
 item.rbmk_pellet_zfb_pu241.name=Pu-241 ZFB Pellet
 item.rbmk_pellet_gravity.name=§7Graviton Fuel Pellet§r
+item.rbmk_pellet_lutece.name=§3Lutece Quasi-RBMK Fuel Pellet§r
 item.rbmk_tool.name=RBMK Console Linking Device
 item.rbmk_tool.desc=Sneak and right-click RBMK to save the position,$sneak and right-click console to link!
 item.rbmk_tool.linked=Position set!
