--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -1864,6 +1864,7 @@ item.billet_zfb_am_mix.name=Reactor Grade Americium ZFB Billet
 item.billet_zfb_bismuth.name=Bismuth ZFB Billet
 item.billet_zfb_pu241.name=Pu-241 ZFB Billet
 item.billet_zirconium.name=Zirconium Billet
+item.billet_oppenheimium.name=Oppenheimium Billet
 item.bio_wafer.name=Algae Wafer
 item.biomass.name=Biomass
 item.biomass_compressed.name=Compressed Biomass
@@ -2836,6 +2837,7 @@ item.ingot_uranium_fuel.name=Ingot of Uranium Fuel
 item.ingot_verticium.name=Verticium Ingot
 item.ingot_weidanium.name=Weidanium Ingot
 item.ingot_zirconium.name=Zirconium Cube
+item.ingot_oppenheimium.name=Oppenheimium Ingot
 item.injector_5htp.name=5-HTP Autoinjector
 item.injector_knife.name=8 Inch Blade Autoinjector
 item.ink.name=林 Ink
@@ -3613,6 +3615,7 @@ item.rbmk_fuel_zfb_bismuth.name=Bismuth RBMK ZFB Rod
 item.rbmk_fuel_zfb_pu241.name=Pu-241 RBMK ZFB Rod
 item.rbmk_fuel_gravity.name=§7Graviton RBMK Fuel Rod§r
 item.rbmk_fuel_lutece.name=§3Lutece Quasi-RBMK Fuel Rod§r
+item.rbmk_fuel_oppenheimium.name=§bOppenheimium RBMK Fuel Rod§r
 item.rbmk_lid.name=RBMK Cover Panel
 item.rbmk_lid_glass.name=RBMK Glass Cover Panel
 item.rbmk_pellet_balefire.name=Balefire Fuel Pellet
@@ -3648,6 +3651,7 @@ item.rbmk_pellet_zfb_bismuth.name=Bismuth ZFB Pellet
 item.rbmk_pellet_zfb_pu241.name=Pu-241 ZFB Pellet
 item.rbmk_pellet_gravity.name=§7Graviton Fuel Pellet§r
 item.rbmk_pellet_lutece.name=§3Lutece Quasi-RBMK Fuel Pellet§r
+item.rbmk_pellet_oppenheimium.name=§bOppenheimium RBMK Fuel Pellet§r
 item.rbmk_tool.name=RBMK Console Linking Device
 item.rbmk_tool.desc=Sneak and right-click RBMK to save the position,$sneak and right-click console to link!
 item.rbmk_tool.linked=Position set!
