--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -565,6 +565,7 @@ chem.OIL_SAND=Tar Sand Extraction
 chem.OSMIRIDIUM_DEATH=Osmiridic Solution Production
 chem.PC_ELECTROLYSIS=Potassium Chloride Electrolysis
 chem.PEROXIDE=Hydrogen Peroxide Production
+chem.CRADPAINT=Radium Paint Production
 chem.PET=PET Synthesis
 chem.PETROIL_LEADED=Leaded Petroil Mixing
 chem.POLYMER=Polymer Synthesis
@@ -1357,6 +1358,7 @@ hbmfluid.woodoil=Wood Oil
 hbmfluid.xenon=Xenon Gas
 hbmfluid.xpjuice=Experience Juice
 hbmfluid.xylene=BTX
+hbmfluid.radpaint=Radium Paint
 hbmpseudofluid.none=Empty
 hbmpseudofluid.heuf6=Highly Enriched UF6
 hbmpseudofluid.meuf6=Medium Enriched UF6
