--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -1323,6 +1323,7 @@ hbmfluid.plasma_dt=Deuterium-Tritium Plasma
 hbmfluid.plasma_hd=Hydrogen-Deuterium Plasma
 hbmfluid.plasma_ht=Hydrogen-Tritium Plasma
 hbmfluid.plasma_xm=Helium-4-Oxygen Plasma
+hbmfluid.plasma_uni=§cUni Plasma§r
 hbmfluid.potassium_chloride=Potassiumchloride Solution
 hbmfluid.puf6=Plutonium Hexafluoride
 hbmfluid.radiosolvent=High-Performance Solvent
@@ -1359,6 +1360,7 @@ hbmfluid.xenon=Xenon Gas
 hbmfluid.xpjuice=Experience Juice
 hbmfluid.xylene=BTX
 hbmfluid.radpaint=Radium Paint
+hbmfluid.unicat=§cUni§r
 hbmpseudofluid.none=Empty
 hbmpseudofluid.heuf6=Highly Enriched UF6
 hbmpseudofluid.meuf6=Medium Enriched UF6
@@ -5077,6 +5079,7 @@ tile.ore_titanium.name=Titanium Ore
 tile.ore_tungsten.name=Tungsten Ore
 tile.ore_unobtainium.name=Brightblende Ore
 tile.ore_uranium.name=Uranium Ore
+tile.ore_unium.name=§dUnium Ore§r
 tile.ore_uranium_scorched.name=Scorched Uranium Ore
 tile.ore_verticium.name=Dollar Green Mineral
 tile.ore_volcano.name=Geothermal Vent
