i am truly sorry
cum coolant...
not much else to say

--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -1361,6 +1361,8 @@ hbmfluid.xpjuice=Experience Juice
 hbmfluid.xylene=BTX
 hbmfluid.radpaint=Radium Paint
 hbmfluid.unicat=§cUni§r
+hbmfluid.cum=Cum
+hbmfluid.cum_hot=Hot Cum
 hbmpseudofluid.none=Empty
 hbmpseudofluid.heuf6=Highly Enriched UF6
 hbmpseudofluid.meuf6=Medium Enriched UF6
