--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -503,6 +503,7 @@ cannery.willow.7=Now the willow's leaves can be harvested. Breaking the top bloc
 cannery.willow.8=Soon the plant will start growing again, yielding more leaves if the dirt is replaced with oily dirt. The leaves can be processed into cadmium powder using an ore acidizer.
 cannery.willow.9=Harvesting willow leaves can be automated using the automatic buzzsaw, it will only break plants that are ready for harvest.
 
+chem.OPIUMALK=Opium Alkaloids Production
 chem.ARSENIC=Arsenic Extraction
 chem.ASPHALT=Asphalt Production
 chem.BAKELITE=Bakelite Production
@@ -1324,6 +1325,7 @@ hbmfluid.plasma_hd=Hydrogen-Deuterium Plasma
 hbmfluid.plasma_ht=Hydrogen-Tritium Plasma
 hbmfluid.plasma_xm=Helium-4-Oxygen Plasma
 hbmfluid.plasma_uni=§cUni Plasma§r
+hbmfluid.opiumal=Opium Alkaloids
 hbmfluid.potassium_chloride=Potassiumchloride Solution
 hbmfluid.puf6=Plutonium Hexafluoride
 hbmfluid.radiosolvent=High-Performance Solvent
@@ -2753,6 +2755,7 @@ item.ingot_beryllium.name=Beryllium Ingot
 item.ingot_bismuth.name=Bismuth Ingot
 item.ingot_boron.name=Boron Ingot
 item.ingot_c4.name=Bar of Composition C-4
+item.ingot_opium.name=Bar of Opium
 item.ingot_cadmium.name=Cadmium Ingot
 item.ingot_calcium.name=Calcium Ingot
 item.ingot_cdalloy.name=Cadmium Steel Ingot
