--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -504,6 +504,8 @@ cannery.willow.8=Soon the plant will start growing again, yielding more leaves i
 cannery.willow.9=Harvesting willow leaves can be automated using the automatic buzzsaw, it will only break plants that are ready for harvest.
 
 chem.OPIUMALK=Opium Alkaloids Production
+chem.RESINPROD=Resin Production
+chem.MORPHINEPROD=Morphine Production
 chem.ARSENIC=Arsenic Extraction
 chem.ASPHALT=Asphalt Production
 chem.BAKELITE=Bakelite Production
@@ -1362,6 +1364,7 @@ hbmfluid.xenon=Xenon Gas
 hbmfluid.xpjuice=Experience Juice
 hbmfluid.xylene=BTX
 hbmfluid.radpaint=Radium Paint
+hbmfluid.resin=Liquid Resin
 hbmfluid.unicat=§cUni§r
 hbmfluid.cum=Cum
 hbmfluid.cum_hot=Hot Cum
@@ -2756,6 +2759,7 @@ item.ingot_bismuth.name=Bismuth Ingot
 item.ingot_boron.name=Boron Ingot
 item.ingot_c4.name=Bar of Composition C-4
 item.ingot_opium.name=Bar of Opium
+item.powder_morphine.name=Morphine Powder
 item.ingot_cadmium.name=Cadmium Ingot
 item.ingot_calcium.name=Calcium Ingot
 item.ingot_cdalloy.name=Cadmium Steel Ingot
