--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -618,6 +618,7 @@ container.assembler=Assembly Machine
 container.autocrafter=Automatic Crafting Table
 container.barrel=Barrel
 container.bat9000=Big-Ass Tank 9000
+container.orb3000=Ultra Orbus Tank
 container.battery=Energy Storage
 container.bombMulti=Multi Purpose Bomb
 container.catalyticReformer=Catalytic Reformer
@@ -4854,6 +4855,7 @@ tile.machine_assemfac.name=Assembly Factory
 tile.machine_autocrafter.name=Automatic Crafting Table
 tile.machine_autosaw.name=Automatic Buzz Saw
 tile.machine_bat9000.name=Big-Ass Tank 9000
+tile.machine_orb3000.name=Orb Tank 3000
 tile.machine_battery.name=Energy Storage Block
 tile.machine_battery_potato.name=Potato Battery Block
 tile.machine_boiler.name=Boiler
