--- a/src/main/resources/assets/hbm/lang/en_US.lang
+++ b/src/main/resources/assets/hbm/lang/en_US.lang
@@ -53,7 +53,7 @@ achievement.fiend=Delinquent
 achievement.freytag.desc=Herold's life guards
 achievement.freytag=Freytag
 achievement.fusion.desc=A dance of deuterons, tritons, and energy.
-achievement.fusion=Fusion
+achievement.fusion=Fusiob
 achievement.gasCent.desc=Unenriched Uranium hates him!
 achievement.gasCent=The Zippe Style
 achievement.goFish.desc=Nautical Crucifixion
@@ -638,7 +638,7 @@ container.crateTemplate=Template Crate
 container.crateTungsten=Tungsten Crate
 container.crystallizer=Ore Acidizer
 container.cyclotron=Cyclotron
-container.dfcCore=Dark Fusion Core
+container.dfcCore=Dark Fusiob Core
 container.dfcEmitter=DFC Emitter
 container.dfcInjector=DFC Fuel Injector
 container.dfcReceiver=DFC Receiver
@@ -680,7 +680,7 @@ container.machineCrucible=Crucible
 container.machineDiesel=Diesel Generator
 container.machineElectricBoiler=Electric Oil Heater
 container.machineFEL=FEL
-container.machineITER=Fusion Reactor
+container.machineITER=Fusiob Reactor
 container.machineLargeTurbine=Industrial Steam Turbine
 container.machineLiquefactor=Liquefactor
 container.machineMixer=Industrial Mixer
@@ -3497,6 +3497,8 @@ item.powder_cobalt.name=Cobalt Powder
 item.powder_cobalt_tiny.name=Tiny Pile of Cobalt Powder
 item.powder_coltan.name=Purified Tantalite
 item.powder_coltan_ore.name=Crushed Coltan
+item.powder_shit.name=Pile of Shit
+item.normie.name=Normie Peasant
 item.powder_combine_steel.name=CMB Steel Powder
 item.powder_copper.name=Copper Powder
 item.powder_cs137.name=Caesium-137 Powder
@@ -4093,7 +4095,7 @@ item.toothpicks.name=Toothpicks
 item.train.cargo_tram.name=Electric Flat Bed Tram
 item.trinitite.name=Trinitite
 item.tritium_deuterium_cake.name=Tritium-Deuterium-Cake
-item.tritium_deuterium_cake.desc=Not actual cake, but great$universal fusion fuel!
+item.tritium_deuterium_cake.desc=Not actual cake, but great$universal fusiob fuel!
 item.tsar_core.name=Tsar Bomba Core
 item.tsar_kit.name=Tsar Bomba Kit
 item.turbine_titanium.name=Titanium Steam Turbine
@@ -4674,7 +4676,7 @@ tile.det_charge.name=Explosive Charge
 tile.det_cord.name=Det Cord
 tile.det_miner.name=Mining Charge
 tile.det_nuke.name=Nuclear Charge
-tile.dfc_core.name=Dark Fusion Core
+tile.dfc_core.name=Dark Fusiob Core
 tile.dfc_emitter.name=DFC Emitter
 tile.dfc_injector.name=DFC Fuel Injector
 tile.dfc_receiver.name=DFC Receiver
@@ -4748,7 +4750,7 @@ tile.furnace_steel.desc=Very large furnace that can provide bonus items$when sme
 tile.fusion_center.name=Central Magnet Piece
 tile.fusion_conductor.name=Superconducting Magnet
 tile.fusion_conductor_welded.name=Superconducting Magnet (Welded)
-tile.fusion_core.name=Fusion Reactor Control
+tile.fusion_core.name=Fusiob Reactor Control
 tile.fusion_hatch.name=Duct Deco Block
 tile.fusion_heater.name=Plasma Heater Component
 tile.fusion_motor.name=Magnet Motor Piece
@@ -4829,7 +4831,7 @@ tile.heater_oven.name=Heating Oven
 tile.heater_oven.desc=Burns solid fuel to produce heat.$Accepts heat from the bottom with 50%% efficiency.
 tile.hev_battery.name=Suit Battery
 tile.impact_dirt.name=Scorched Dirt
-tile.iter.name=Fusion Reactor
+tile.iter.name=Fusiob Reactor
 tile.ladder_aluminium.name=Aluminium Ladder
 tile.ladder_cobalt.name=Cobalt Ladder
 tile.ladder_copper.name=Copper Ladder
@@ -5247,7 +5249,7 @@ tile.stone_resource.hematite.name=Hematite
 tile.stone_resource.limestone.name=Limestone
 tile.stone_resource.malachite.name=Malachite
 tile.stone_resource.sulfur.name=Sulfurous Stone
-tile.struct_iter_core.name=Fusion Reactor Core Component
+tile.struct_iter_core.name=Fusiob Reactor Core Component
 tile.struct_launcher.name=Launch Pad Component Block
 tile.struct_launcher_core.name=Compact Launcher Core Component
 tile.struct_launcher_core_large.name=Launch Table Core Component
